next question event

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 
                 </div>
     
-                <button id="next"> next question </button>
+                <button id="next"> Next question </button>
    <script src="script.js"></script>
 </body>
 </html>
