--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div id="score">
+        <h1> Score: </h1>
+    </div>
     <img src="https://upload.wikimedia.org/wikipedia/en/a/a2/National_Football_League_logo.svg"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
