--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div id="score">
-        <h1> Score: </h1>
-    </div>
+    <div class="scoreBoard">
+    <div class="scoreText"> Score: </div>
+    <div class="scorePoints"> 0 </div>
+   </div>
     <img src="https://upload.wikimedia.org/wikipedia/en/a/a2/National_Football_League_logo.svg"/>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,6 +24,7 @@
                 </div>
     
                 <button id="next"> Next question </button>
+                
    <script src="script.js"></script>
 </body>
 </html>
